# miniSQL

./: CMakeLists.txt  CatalogManager.cpp  CatalogManager.h  ConditionNode.cpp  ConditionNode.h  Lexer.cpp  Lexer.h  TableMeta.cpp  TableMeta.h  buffermanager.cpp  buffermanager.h  catalog.data  comparevalue.cpp  comparevalue.h  error.cpp  error.h  indexmanager.cpp  interpreter.cpp  interpreter.h  main.cpp  recordmanager.cpp  recordmanager.h  table.cpp  table.h  token.cpp  token.h  translator_test_func.cpp  translator_test_generator.cpp  typeconvert.cpp  typeconvert.h
